# house-ai

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt  server.py
config/: data_sources.yaml  financing.yaml  regions.yaml  screening_rules.yaml  user_profile.yaml  watchlist.yaml  wife_profile.yaml
data/manual/: complex_metadata.example.csv  market_observations.example.csv
prompts/: alert_report.md  daily_report.md  weekly_report.md
scripts/: fetch_bok_base_rate.py  fetch_kakao_place.py  fetch_kapt_info.py  fetch_molit_trades.py  fetch_naver_search.py  generate_ai_opinion.py  publish_notion_top10.py  review_rtms_candidates.py
src/home_decision_ai/: __init__.py  config.py  main.py  settings.py
src/home_decision_ai/alerts/: __init__.py
src/home_decision_ai/analyzers/: __init__.py
src/home_decision_ai/api/: app.py  server.py
src/home_decision_ai/collectors/: __init__.py  bok_ecos.py  kakao_local.py  kapt.py  molit_rtms.py  naver_search.py
src/home_decision_ai/db/: models.py  session.py
src/home_decision_ai/integrations/: notion.py  openai_responses.py
src/home_decision_ai/models/: __init__.py  financing.py  observations.py
src/home_decision_ai/scheduler/: worker.py
src/home_decision_ai/services/: ai_opinion.py  reporting.py
tests/: test_ai_opinion.py  test_api.py  test_bok_ecos.py  test_config.py  test_financing.py  test_kakao_local.py  test_kapt.py  test_molit_rtms.py  test_naver_search.py  test_observations.py  test_openai_responses.py  test_screening_rules.py
(+2 files in other folders)
